--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <left><img alt="Это я" width="15%" src="me.jpg"></left>
       <br/>
       <h2>Контакты:</h2>
-      Страничка <a href=https://vk.com/strvngthree/>vkontakte</a>
+      Страничка <a href=https://vk.com/username/>strvngthree</a>
       <br/>
       <a href=https://github.com/username>GitHub</a>
       <br/>
