--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <left><img alt="Это я" width="15%" src="me.jpg"></left>
       <br/>
       <h2>Контакты:</h2>
-      Страничка <a href=https://vk.com/username/>strvngthree</a>
+      Страничка <a href=https://vk.com/strvngthree/>vkontakte</a>
       <br/>
-      <a href=https://github.com/username>GitHub</a>
+      <a href=https://github.com/vertutaplacinta>GitHub</a>
       <br/>
       Телефон: <b>+79151026325</b>
       <br/>
