--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!txttype html>
+<!doctype html>
   <html>
     <head>
-      <meta charset="utf-8">
+      <meta charset="">
       <title>Моя личная страничка</title>
     </head>
     <body> 
