--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!doctype html>
+п»ї<!doctype html>
   <html>
     <head>
-      <meta charset="">
-      <title>Моя личная страничка</title>
+      <meta charset="utf-8">
+      <title>РњРѕСЏ Р»РёС‡РЅР°СЏ СЃС‚СЂР°РЅРёС‡РєР°</title>
     </head>
     <body> 
-      <left><h1>Женя Ворошнина</h1></left>
-      <left><img alt="Это я" width="15%" src="me.jpg"></left>
+      <left><h1>Р–РµРЅСЏ Р’РѕСЂРѕС€РЅРёРЅР°</h1></left>
+      <left><img alt="Р­С‚Рѕ СЏ" width="15%" src="me.jpg"></left>
       <br/>
-      <h2>Контакты:</h2>
-      Страничка <a href=https://vk.com/strvngthree>vkontakte</a>
+      <h2>РљРѕРЅС‚Р°РєС‚С‹:</h2>
+      РЎС‚СЂР°РЅРёС‡РєР° <a href=https://vk.com/strvngthree>vkontakte</a>
       <br/>
       <a href=https://github.com/vertutaplacinta>GitHub</a>
       <br/>
-      Телефон: <b>+79151026325</b>
+      РўРµР»РµС„РѕРЅ: <b>+79151026325</b>
       <br/>
       E-mail: <i>eyuyanbukhtina@edu.hse.ru</i>
     </body>
