--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Моя личная страничка</title>
     </head>
     <body> 
-      <left><h1>Женя Ворошнина</h1></left>
+      <left><h1>Женя Янбухтина</h1></left>
       <left><img alt="Это я" width="15%" src="me.jpg"></left>
       <br/>
       <h2>Контакты:</h2>
