--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
       <meta charset="utf-8">
       <title>Моя личная страничка</title>
     </head>
-    <body> 
-      <left><h1>Женя Янбухтина</h1></left>
+    <body style="background-color:lemonchiffon;">
+      <h1 style="text-align:center;">Женя Янбухтина</h1>
       <left><img alt="Это я" width="15%" src="me.jpg"></left>
       <br/>
-      <h2>Контакты:</h2>
+      <h2 style="text-align:center;">Контакты:</h2>
       Страничка <a href=https://vk.com/strvngthree>vkontakte</a>
       <br/>
       <a href=https://github.com/vertutaplacinta>GitHub</a>
