--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background-color:lemonchiffon;">
       <h1 style="text-align:center;">Женя Янбухтина</h1>
-      <left><img alt="Это я" width="15%" src="me.jpg"></left>
+      <img alt="Это я" width="15%" src="me.jpg" align="middle">
       <br/>
       <h2 style="text-align:center;">Контакты:</h2>
       Страничка <a href=https://vk.com/strvngthree>vkontakte</a>
