--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
   <html>
     <head>
       <meta charset="utf-8">
@@ -8,6 +8,7 @@
       <h1 style="text-align:center;">Женя Янбухтина</h1>
       <img alt="Это я" width="15%" src="me.jpg" align="middle">
       <br/>
+<p style="text-align:center;">  Молодая, двадцатилетняя. Адекватная, без материальных и жилищных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
       <h2 style="text-align:center;">Контакты:</h2>
       Страничка <a href=https://vk.com/strvngthree>vkontakte</a>
       <br/>
