--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
-  <html>
+ <html>
     <head>
       <meta charset="utf-8">
       <title>Моя личная страничка</title>
     </head>
     <body style="background-color:lemonchiffon;">
       <h1 style="text-align:center;">Женя Янбухтина</h1>
-      <img alt="Это я" width="15%" src="me.jpg" align="middle">
+      <center><img alt="Это я" width="15%" src="me.jpg"></center>
       <br/>
-<p style="text-align:center;">  Молодая, двадцатилетняя. Адекватная, без материальных и жилищных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
+	  <p style="text-align:center;">  Молодая, двадцатилетняя. Без жилищных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
       <h2 style="text-align:center;">Контакты:</h2>
       Страничка <a href=https://vk.com/strvngthree>vkontakte</a>
       <br/>
