--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <html>
+ <!doctype html>
+  <html>
     <head>
       <meta charset="utf-8">
       <title>Моя личная страничка</title>
@@ -9,12 +10,12 @@
       <br/>
 	  <p style="text-align:center;">  Молодая, двадцатилетняя. Без жилищных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
       <h2 style="text-align:center;">Контакты:</h2>
-      Страничка <a href=https://vk.com/strvngthree>vkontakte</a>
+     <p style="text-align:center;"> Страничка <a href=https://vk.com/strvngthree>vkontakte</a></p>
       <br/>
-      <a href=https://github.com/vertutaplacinta>GitHub</a>
+      <p style="text-align:center;"><a href=https://github.com/vertutaplacinta>GitHub</a></p>
       <br/>
-      Телефон: <b>+79151026325</b>
+      <p style="text-align:center;">Телефон: <b>+79151026325</b></p>
       <br/>
-      E-mail: <i>eyuyanbukhtina@edu.hse.ru</i>
+      <p style="text-align:center;">E-mail: <i>eyuyanbukhtina@edu.hse.ru</i></p>
     </body>
   </html>
