--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <h1 style="text-align:center;">Женя Янбухтина</h1>
       <center><img alt="Это я" width="15%" src="me.jpg"></center>
       <br/>
-	  <p style="text-align:center;">  Молодая, двадцатилетняя. Без жилищных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
+	  <p style="text-align:center;">  Молодая, двадцатилетняя. Адекватная, без жилищных и материальных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
       <h2 style="text-align:center;">Контакты:</h2>
      <p style="text-align:center;"> Страничка <a href=https://vk.com/strvngthree>vkontakte</a></p>
       
