--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
- </head>
+<!doctype html>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <title>Моя личная страничка</title>
+    </head>
     <body style="background-color:lemonchiffon;">
-      <h1 style="text-align:center;">Женя Янбухтина</h1>
+      <h1 style="text-align:center;"> Женя Янбухтина</h1>
       <center><img alt="Это я" width="15%" src="me.jpg"></center>
       <br/>
-	  <p style="text-align:center;">  Молодая, двадцатилетняя. Адекватная, без жилищных и материальных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась. </p>
+	  <p style="text-align:center;"> <font face="segoe print"> Молодая, двадцатилетняя. Без <s>вредных привычек</s> жилищных и материальных проблем, не замужем, детей нет, к уголовной ответственности не привлекалась.</font></p>
+     <p style="text-align:center;"> ______________________________</p>
       <h2 style="text-align:center;">Контакты:</h2>
      <p style="text-align:center;"> Страничка <a href=https://vk.com/strvngthree>vkontakte</a></p>
       
